We have basic emotion detection from webcam!

--- a/FaceEmotion/FaceEmotion/MainWindow.xaml
+++ b/FaceEmotion/FaceEmotion/MainWindow.xaml
@@ -1,9 +1,16 @@
 ﻿<Window x:Class="FaceEmotion.MainWindow"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         Title="MainWindow" Height="700" Width="960">
+        xmlns:controls="clr-namespace:WPFMediaKit.DirectShow.Controls;assembly=WPFMediaKit"
+        Title="MainWindow" Height="700" Width="960">
     <Grid x:Name="BackPanel">
         <Image x:Name="FacePhoto" Stretch="Uniform" Margin="0,0,0,50" MouseMove="FacePhoto_MouseMove" />
+        <!--<controls:VideoCaptureElement x:Name="FacePhotos" LoadedBehavior="Play"
+                                 
+                                 Stretch="Uniform"
+                                 VideoCaptureSource="{Binding Path=CaptureDeviceName}"
+                                 FPS="30" />-->
+        <!--<MediaPlayerElement x:Name="mediaPlayerElement" Stretch="Uniform" Margin="0,0,0,50" AreTransportControlsEnabled="True"/>-->
         <DockPanel DockPanel.Dock="Bottom">
             <Button x:Name="BrowseButton" Width="72" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left"
                      Content="Browse..."
