--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,18 @@
 .card_stretch {
   height: 100%;
 }
+
+.snapper {
+  position: sticky;
+  top: 0;
+  padding-top: 1em;
+}
+
+.snapper .left {
+  float: left;
+  margin-left: 35px;
+}
+.snapper .right {
+  float: left;
+  margin-left: 280px;
+}
