--- a/server/web/css/main.css
+++ b/server/web/css/main.css
@@ -16,16 +16,25 @@
   margin-left: 280px;
 }
 
-body, .card {
-  background-color: #0040a6;
-  color: white;
-}
-
-.card {
-  border-color: aliceblue;
-}
-
 .title {
   font-weight: bolder;
   font-size: 5em;
+}
+.fa-1x {
+font-size: 1.5rem;
+}
+.navbar-toggler.toggler-example {
+cursor: pointer;
+}
+.dark-blue-text {
+color: #0A38F5;
+}
+.dark-pink-text {
+color: #AC003A;
+}
+.dark-amber-text {
+color: #ff6f00;
+}
+.dark-teal-text {
+color: #004d40;
 }
